# ca-asthma

./: .gitignore  Asthma_reddit.csv  In_out_DomainClassification.py  MANIFEST.in  QAdataset.txt  README.md  app.py  docker-compose.yaml  fa_chat_close.ipynb  fa_chat_close.py  fe_Chat_full.csv  pyproject.toml  qa.csv  requirements.txt  setup.py  wsgi.py
.github/workflows/: actions.yml  pylint.yml
backend/: Dockerfile  In_out_DomainClassification.py  NER_POS.ipynb  NER_POS.py  api.py  app.py  check.py  docker-compose.yml  fa_chat_close (1).ipynb  fa_chat_close.py  fe_chat.csv  gpt3.py  indomain_training.py  outdoor_activity.py  questions.npy  questions_len.npy  requirements-ner.txt  requirements.txt  smodel.py  test.py  userInput.py  wsgi.py
backend/chat-client/: client.py
backend/model_objects/: question_emb.npy  question_len_embedding.npy  questions.npy  questions_len.npy  questions_len_new.npy  questions_new.npy  verb_noun_relation_dict_new.pkl
development_resources/: GPT-2_fine_tuning.ipynb  How to use interface of models on huggingface.ipynb  fa_chat_close.ipynb  gpt3.ipynb
development_resources/ner/: .~lock.ner_tag_list_full.csv#  Asthma_main.csv  data.txt  extra_qa - Sheet1.csv  ner_json_generator.ipynb  ner_tag_list_full.csv  ner_tags.json  pos_tagging.ipynb  pos_tagging_extra.ipynb  pos_tags_115_after.csv  tags.json  word_analysis.ipynb
engine/: In_out_DomainClassification.py  NER_POS.py  fa_chat_close.py  gpt3.py  outdoor_activity.py  wsgi.py
engine/model_checkpoints/: fe_chat.csv  mock_healthcare.csv  nerList.csv  pos_dict_new.pkl  verb_noun_relation_dict.pkl
model_checkpoints/: Asthma-QA.csv
ner/: Asthma_full.csv  annotations.json  pos_tagging_extra.ipynb  pos_tags_115.csv
src/: Dockerfile  app.py  entrypoint.py  requirements.txt
src/indomain/: question_classifier.py  sbert_model.py
src/outdomain/: gpt3_model.py  ner_pos.py  outdoor_activity.py
