[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asthmaca"
version = "2.0.0"
authors = [
  { name="Tanmay Chimurkar", email="tanmay.chimurkar@uzh.ch" },
]
description = "This is a project that acts as a conversational agent for Asthmatic patients by using sBERT and GTP3"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools]
packages = ["src"]

keywords = ['conversational agent', 'Asthma Chatbot']
[project.urls]
"Homepage" = "https://github.com/tanmaychimurkar/conversational-agent-for-Asthma"

[tool.pycodestyle]
blank-after-import = 1
blank-after-class = 1
blank-before-class = 2

[tool.black]
skip-string-normalization = true
use-pycodestyle = true
line_length = 88
preview=true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
lines_after_imports = 1
extend_skip = [".git",".tox","*prod.py","*dev.py","*base.py","*__init__.py","build","tests"]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true